--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
   <section id="root"></section>
 
   <script type="module" src="main.js"></script>
+  <script type="module" src="./firebase/timeline.js"></script>
 </body>
 </html>
