--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/c26e936b31.js" crossorigin="anonymous"></script>
+  <title>GoodTaste</title>
 </head>
 <body>
+  <main id="main"></main>
   <script type="module" src="main.js"></script>
 </body>
 </html>
